# auto-readme-gen

./: .gitignore  README.md  TEST_RESULTS.md  ai_helpers.py  generator.py  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  branch-protection.yml
.github/workflows/: ci.yml
